--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
-                <li class="active"><a href="./index.html">الصفحه الرئيسيه</a></li>
+                <li><a href="./index.html">الصفحه الرئيسيه</a></li>
                 <li><a href="./about-us.html">ماذا عنا</a></li>
                 <li><a href="./class-details.html">الدوارات</a></li>
                 <li><a href="./services.html">الخدامات</a></li>
@@ -82,33 +82,22 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <nav class="nav-menu" dir="rtl">
+                    <nav class="nav-menu d-flex justify-content-around" dir="rtl">
                         <ul>
-                            <li class="active"><a href="./index.html">الصفحه الرئيسيه</a></li>
+                            <li><a href="./index.html">الصفحه الرئيسيه</a></li>
                             <li><a href="./about-us.html">ماذا عنا</a></li>
-                            <li><a href="./class-details.html">الدوارات</a></li>
+                            <li><a href="#class-details">الدوارات</a></li>
                             <li><a href="./services.html">الخدامات</a></li>
-                            <li><a href="./team.html">فريقنا</a></li>
-                            <!-- <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./about-us.html">About us</a></li>
-                                    <li><a href="./class-timetable.html">Classes timetable</a></li>
-                                    <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
-                                    <li><a href="./team.html">Our team</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./blog.html">Our blog</a></li>
-                                    <li><a href="./404.html">404</a></li>
-                                </ul>
-                            </li> -->
-                            <!-- <li><a href="./contact.html">Contact</a></li> -->
+                            <li><a class="mx-5" href="./team.html">فريقنا</a></li>
+                            <!-- <li><a class="mx-3" href="./contact.html">Contact</a></li> -->
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-3">
                     <div class="top-option">
-                        <div class="to-search search-switch">
+                        <!-- <div class="to-search search-switch">
                             <i class="fa fa-search"></i>
-                        </div>
+                        </div> -->
                         <div class="to-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -208,7 +197,7 @@
     <!-- ChoseUs Section End -->
 
     <!-- Classes Section Begin -->
-    <section class="classes-section spad">
+    <section class="classes-section spad" id="class-details">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -285,7 +274,7 @@
     <!-- ChoseUs Section End -->
 
     <!-- Banner Section Begin -->
-    <section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
+    <!-- <section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -297,7 +286,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Banner Section End -->
 
     <!-- Pricing Section Begin -->
@@ -306,18 +295,17 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Our Plan</span>
-                        <h2>Choose your pricing plan</h2>
+                        <span style="font-size: 30px;">العروض</span>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-8">
                     <div class="ps-item">
-                        <h3>Class drop-in</h3>
+                        <h3>الشهر</h3>
                         <div class="pi-price">
-                            <h2>$ 39.0</h2>
-                            <span>SINGLE CLASS</span>
+                            <h2>200</h2>
+                            <!-- <span>SINGLE CLASS</span> -->
                         </div>
                         <ul>
                             <li>Free riding</li>
