--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- <div class="canvas-search search-switch">
             <i class="fa fa-search"></i>
         </div> -->
-        <nav class="canvas-menu mobile-menu">
+        <nav class="canvas-menu mobile-menu" >
             <ul>
                 <li><a href="#hero" >الصفحه الرئيسيه</a></li>
                 <li><a href="#about" >ماذا عنا</a></li>
@@ -73,12 +73,12 @@
     <!-- Header Section Begin -->
     <header class="header-section" style="position: fixed; margin-bottom: 20px; height: 15%;background: #000000;
 background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%, rgba(250, 250, 250, 0) 100%);">
-        <div class="container-fluid" style="margin-bottom:20px;">
+        <div class="container-fluid" style="margin-bottom:10px;">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="logo">
                         <a href="./index.html">
-                            <img src="img/logo.png" alt="" >
+                            <img src="img/logo.png" width="120" alt="" >
                         </a>
                     </div>
                 </div>
@@ -123,7 +123,7 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%,
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text" >
-                                <span style="font-size:50px; letter-spacing: normal;">شامبليون جيم</span>
+                                <span style="font-size:50px; letter-spacing: normal;">شمبليون جيم</span>
                                 <h1>كن <strong>قويا</strong> تدرب بجد</h1>
                                 <!-- <a href="#" class="primary-btn">اضغط هنا</a> -->
                             </div>
@@ -136,7 +136,7 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%,
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text">
-                                <span style="font-size:50px; letter-spacing: normal;">شامبليون جيم</span>
+                                <span style="font-size:50px; letter-spacing: normal;">شمبليون جيم</span>
                                 <h1>كن <strong>قويا</strong> تدرب بجد</h1>
                                 <!-- <a href="#" class="primary-btn">اضغط هنا</a> -->
                             </div>
@@ -420,7 +420,7 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%,
                         </div>
                     </div> -->
                 
-            <div class="col-lg-5 mb-4 mx-auto">
+            <div class="col-lg-4 mb-4 mx-auto">
                 <div class="ts-item set-bg">
                     <img src="img/team/احمد-الشمبلي.jpg" alt="صوره كابتن الجيم">
                     <div class="ts_text">
@@ -501,7 +501,7 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%,
                 <div class="col-md-4">
                     <div class="gt-text email">
                         <i class="fa fa-envelope"></i>
-                        <p>Support.gymcenter@gmail.com</p>
+                        <a href="mailto:ahmedelshambaly07@gmail.com"><p>ahmedelshambaly07@gmail.com</p></a>
                     </div>
                 </div>
             </div>
