--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
     <!-- Offcanvas Menu Section End -->
 
     <!-- Header Section Begin -->
-    <header class="header-section" style="position: fixed; margin-bottom: 20px; height: 15%;background: #000000;
-background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%, rgba(250, 250, 250, 0) 100%);">
+    <header class="header-section" >
         <div class="container-fluid" style="margin-bottom:10px;">
             <div class="row">
                 <div class="col-lg-3">
@@ -426,7 +425,7 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%,
                     <div class="ts_text">
                         <h4>احمد الشمبلي</h4>
                         <span style="font-size: 20px;">
-                        <div class="canvas-social d-flex justify-content-center text-center" style="gap: 15px;">
+                        <div class="canvas-social d-flex justify-content-center text-center"style="gap: 15px;">
                             <a href="tel:01099714065"><i class="fa fa-phone"></i></a>
                             <a href="https://www.instagram.com/ahmed_elshambaly/?igsh=MTk5aDBlYmN4b3ZhcA%3D%3D"><i class="fa fa-instagram"></i></a>
                             <a href="https://www.facebook.com/ahmed.el.shambaly.2025?mibextid=ZbWKwL"><i class="fa fa-facebook"></i></a>
@@ -574,14 +573,14 @@ background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7) 78%,
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="copyright-text">
-                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        <a href="https://yusef-ramy.github.io/Simple-Card/" target="_blank"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;
                             <script>
                                 document.write(new Date().getFullYear());
                             </script> All rights reserved | This template is made with <i
                                 class="fa fa-heart" aria-hidden="true"></i> by Eng : Yusef Ramy Saber</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
+                        </p></a>
                     </div>
                 </div>
             </div>
