--- a/index.html
+++ b/index.html
@@ -366,28 +366,28 @@
     <div class="gallery-section" id="photo">
         <div class="gallery">
             <div class="grid-sizer"></div>
-            <div class="gs-item grid-wide set-bg" data-setbg="img/gallery/gallery-1.jpg">
-                <a href="img/gallery/gallery-1.jpg" class="thumb-icon image-popup"><i
+            <div class="gs-item grid-wide set-bg" data-setbg="img/gallery/l_D_1.jpg">
+                <a href="img/gallery/l_D_1.jpg" class="thumb-icon image-popup"><i
                         class="fa fa-picture-o"></i></a>
             </div>
-            <div class="gs-item set-bg" data-setbg="img/gallery/gallery-2.jpg">
-                <a href="img/gallery/gallery-2.jpg" class="thumb-icon image-popup"><i
+            <div class="gs-item set-bg" data-setbg="img/gallery/D_5.jpg">
+                <a href="img/gallery/D_5.jpg" class="thumb-icon image-popup"><i
                         class="fa fa-picture-o"></i></a>
             </div>
-            <div class="gs-item set-bg" data-setbg="img/gallery/gallery-3.jpg">
-                <a href="img/gallery/gallery-3.jpg" class="thumb-icon image-popup"><i
+            <div class="gs-item set-bg" data-setbg="img/gallery/D_3.jpg">
+                <a href="img/gallery/D_3.jpg" class="thumb-icon image-popup"><i
                         class="fa fa-picture-o"></i></a>
             </div>
-            <div class="gs-item set-bg" data-setbg="img/gallery/gallery-4.jpg">
-                <a href="img/gallery/gallery-4.jpg" class="thumb-icon image-popup"><i
+            <div class="gs-item set-bg" data-setbg="img/gallery/D_2.jpg">
+                <a href="img/gallery/D_2.jpg" class="thumb-icon image-popup"><i
                         class="fa fa-picture-o"></i></a>
             </div>
-            <div class="gs-item set-bg" data-setbg="img/gallery/gallery-5.jpg">
-                <a href="img/gallery/gallery-5.jpg" class="thumb-icon image-popup"><i
+            <div class="gs-item set-bg" data-setbg="img/gallery/D_4.jpg">
+                <a href="img/gallery/D_4.jpg" class="thumb-icon image-popup"><i
                         class="fa fa-picture-o"></i></a>
             </div>
-            <div class="gs-item grid-wide set-bg" data-setbg="img/gallery/gallery-6.jpg">
-                <a href="img/gallery/gallery-6.jpg" class="thumb-icon image-popup"><i
+            <div class="gs-item grid-wide set-bg" data-setbg="img/gallery/l_U_1.jpg">
+                <a href="img/gallery/l_U_1.jpg" class="thumb-icon image-popup"><i
                         class="fa fa-picture-o"></i></a>
             </div>
         </div>
@@ -485,12 +485,12 @@
                 <div class="col-md-4">
                     <div class="gt-text">
                         <a href="https://maps.app.goo.gl/Xenb6ANf4PUCC19B7" target="_blank"><i class="fa fa-map-marker"></i></a>
-                        <p style="font-size: larger;">كفر الشيخ بيلا اعلى موبليات ابو غالي<br /> طريق : الجرايده</p>
+                        <a href="https://maps.app.goo.gl/Xenb6ANf4PUCC19B7" target="_blank"><p style="font-size: larger;">كفر الشيخ بيلا اعلى موبليات ابو غالي<br /> طريق : الجرايده</p></a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text">
-                        <i class="fa fa-mobile"></i>
+                        <a href="tel:01099714065"><i class="fa fa-mobile"></i></a>
                         <ul>
                             <a href="tel:01099714065"><li>01099714065  </li></a>
                             <a href="tel:01555399322"><li>| 01555399322</li></a>
@@ -499,7 +499,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="gt-text email">
-                        <i class="fa fa-envelope"></i>
+                        <a href="mailto:ahmedelshambaly07@gmail.com"><i class="fa fa-envelope"></i></a>
                         <a href="mailto:ahmedelshambaly07@gmail.com"><p>ahmedelshambaly07@gmail.com</p></a>
                     </div>
                 </div>
@@ -601,7 +601,7 @@
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/bootstrap.min.js"></script> -->
     <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/jquery.barfiller.js"></script>
