--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>شمبليون</title>
+    <title>شمبليون جيم</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -470,20 +470,24 @@ AE8C6F
     </section>
     <!-- ChoseUs Section End -->
 
+
+    <!-- banner-section d-flex align-items-center justify-content-center text-center -->
     <!-- Banner Section Begin  مكان الاشتراك في الموقع دا لو باك-->
-    <!-- <section class="banner-section set-bg" data-setbg="img/banner-bg.jpg">
-        <div class="container">
+     <div style="background-color: #151515">
+    <section class="banner-section set-bg " data-setbg="img/breadcrumb-bg.jpg">
+        <div class="container" >
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="bs-text">
-                        <h2>registration now to get more deals</h2>
-                        <div class="bt-tips">Where health, beauty and fitness meet.</div>
-                        <a href="#" class="primary-btn  btn-normal">Appointment</a>
+                <div class="col-lg-10 text-center" >
+                    <div class="bs-text" style="margin: 10px auto;">
+                        <h2>التدريب الاونلاين</h2>
+                        <div class="bt-tips">المتابعه مع شمبليون مصر</div>
+                        <a href="https://wa.me/201099714065" target="_blank" class="primary-btn  btn-normal">احجز معنا الان</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
+    </div>
     <!-- Banner Section End -->
 
     <!-- Pricing Section Begin -->
@@ -710,16 +714,17 @@ AE8C6F
                             كل يوم بتتحدى فيه نفسك هو خطوة أقرب لهدفك الحقيقي.
                             مفيش مستحيل قدام الإصرار، ودايمًا فاكر إنك أقوى مما تتخيل!</p>
                         <div class="fa-social">
-                            <a   href="https://www.facebook.com/AhmedElShambaly?mibextid=ZbWKwL"
-                                ><i class="fa fa-facebook" style="font-size: 20px;"></i></a>
-                            <a   href="https://youtube.com/channel/UC_jh39xYw8yaxKesFTudttA?si=a6mq685NSf8zJfi_"><i
+                            <a href="https://www.facebook.com/AhmedElShambaly?mibextid=ZbWKwL"><i
+                                    class="fa fa-facebook" style="font-size: 20px;"></i></a>
+                            <a href="https://youtube.com/channel/UC_jh39xYw8yaxKesFTudttA?si=a6mq685NSf8zJfi_"><i
                                     style="font-size: 20px;" class="fa fa-youtube-play"></i></a>
-                            <a  href="https://www.instagram.com/champollion.gym/?igsh=N2hlZWFzdHVzc3N5"><i
+                            <a href="https://www.instagram.com/champollion.gym/?igsh=N2hlZWFzdHVzc3N5"><i
                                     style="font-size: 20px;" class="fa fa-instagram"></i></aaa>
-                            <a   href="https://www.tiktok.com/@champollion_gym?_t=ZS-8z4diX8LVx3&_r=1"target="_blank"><i
-                                style="font-size: 20px;"    class="fa fa-tiktok"></i></a>
+                                <a
+                                    href="https://www.tiktok.com/@champollion_gym?_t=ZS-8z4diX8LVx3&_r=1"target="_blank"><i
+                                        style="font-size: 20px;" class="fa fa-tiktok"></i></a>
 
-                            <!-- <a href="#"><i class="fa  fa-envelope-o"></i></a> -->
+                                <!-- <a href="#"><i class="fa  fa-envelope-o"></i></a> -->
                         </div>
                     </div>
                 </div>
