change main , online photo

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ AE8C6F
                 <div class="col-lg-3">
                     <div class="logo">
                         <a href="./index.html">
-                            <img src="img/logo.png" width="120" alt="">
+                            <!-- <img src="img/logo.png" width="120" alt=""> -->
                         </a>
                     </div>
                 </div>
@@ -314,27 +314,32 @@ AE8C6F
     <!-- Hero Section Begin -->
     <section class="hero-section" id="hero">
         <div class="hs-slider owl-carousel">
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-1.jpg">
+            <div class="hs-item set-bg" data-setbg="img/hero/S_Chm_4.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text">
                                 <span style="font-size:50px; letter-spacing: normal;">شمبليون جيم</span>
                                 <h1>كن <strong>قويا</strong> تدرب بجد</h1>
-                                <!-- <a href="#" class="primary-btn">اضغط هنا</a> -->
+                                <a href="https://wa.me/201099714065" target="_blank"
+                                    style="border-radius: 30px; font-size: large;"
+                                    class="primary-btn  btn-normal">احجز معنا الان</a>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="hs-item set-bg" data-setbg="img/hero/hero-2.jpg">
+            <div class="hs-item set-bg" data-setbg="img/hero/B_Chm_3.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 offset-lg-6">
                             <div class="hi-text">
                                 <span style="font-size:50px; letter-spacing: normal;">شمبليون جيم</span>
                                 <h1>كن <strong>قويا</strong> تدرب بجد</h1>
-                                <!-- <a href="#" class="primary-btn">اضغط هنا</a> -->
+                                <a href="https://wa.me/201099714065" target="_blank"
+                                    style="border-radius: 30px; font-size: large;"
+                                    class="primary-btn  btn-normal">احجز معنا الان</a>
                             </div>
                         </div>
                     </div>
@@ -408,7 +413,7 @@ AE8C6F
                 <div class="col-lg-4 col-md-6">
                     <div class="class-item">
                         <div class="ci-pic">
-                            <img src="img/classes/class-1.jpg" style="min-height: 230px;" alt="">
+                            <img src="img/classes/fit-woman.jpeg" style="min-height: 245px;" alt="">
                         </div>
                         <div class="ci-text">
                             <span style="font-size:20px !important;">خساره الاوزن</span>
@@ -420,7 +425,7 @@ AE8C6F
                 <div class="col-lg-4 col-md-6">
                     <div class="class-item">
                         <div class="ci-pic">
-                            <img src="img/classes/class-2.jpg" style="min-height: 230px;" alt="">
+                            <img src="img/classes/2.webp" style="min-height: 230px; max-height: 230px;" alt="">
                         </div>
                         <div class="ci-text">
                             <span style="font-size:30px !important;">اللياقه البدنيه</span>
@@ -471,22 +476,22 @@ AE8C6F
     <!-- ChoseUs Section End -->
 
 
-    <!-- banner-section d-flex align-items-center justify-content-center text-center -->
     <!-- Banner Section Begin  مكان الاشتراك في الموقع دا لو باك-->
-     <div style="background-color: #151515">
-    <section class="banner-section set-bg " data-setbg="img/breadcrumb-bg.jpg">
-        <div class="container" >
-            <div class="row">
-                <div class="col-lg-10 text-center" >
-                    <div class="bs-text" style="margin: 10px auto;">
-                        <h2>التدريب الاونلاين</h2>
-                        <div class="bt-tips">المتابعه مع شمبليون مصر</div>
-                        <a href="https://wa.me/201099714065" target="_blank" class="primary-btn  btn-normal">احجز معنا الان</a>
+    <div style="background-color: #151515;">
+        <section class="banner-section set-bg" style="object-fit: contain !important;" data-setbg="img/hero/A1.jpg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 text-center">
+                        <div class="bs-text" style="margin: 10px auto;">
+                            <h2>التدريب الاونلاين</h2>
+                            <div class="bt-tips">المتابعه مع شمبليون مصر</div>
+                            <a href="https://wa.me/201099714065" target="_blank" class="primary-btn  btn-normal">احجز
+                                معنا الان</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     </div>
     <!-- Banner Section End -->
 
@@ -819,11 +824,11 @@ AE8C6F
                 desc: "المواعيد : كل الايام ماعدا  فتره السيدات",
                 price: "250",
                 features: [
-                    "نظام بدريبي وغذائي خاص",
-                    "فقدان الوزن",
-                    "بناء العضلات",
-                    "المتابعه المستمره",
-
+                    "اجهزة حديثه ومتنوعه",
+                    "مدربين محترفين وخبرة دولية",
+                    "برامج مخصصة (ضخامه - تنشيف - خساره وزن - لياقه)",
+                    "متابعة وقياسات وانظمه غذائيه",
+                    "اجواء راقيه ودعم وتحفيز مستمر",
                 ],
             },
             standard: {
@@ -831,11 +836,12 @@ AE8C6F
                 desc: "المواعيد: الاحد ، الثلاثاء , الخميس من 9 ل 12 صباحا ومن 6 ل 8 مساء",
                 price: "200",
                 features: [
-                    "نظام تدريبي وغذائي خاص",
-                    "فقدان الوزن",
-                    "شد الجسم",
-                    "التعافي من الاصابات",
-                    "المتابعه المستمره",
+                    "اجهزة حديثه ومتنوعه",
+                    "مدربين محترفين وخبرة دولية",
+                    "برامج مخصصة (ضخامه - تنشيف - خساره وزن - لياقه)",
+                    "تيم بنات خاص",
+                    "متابعة وقياسات وانظمه غذائيه",
+                    "اجواء راقيه ودعم وتحفيز مستمر",
                 ],
             },
 
