done heros and hotfix

--- a/index.html
+++ b/index.html
@@ -27,18 +27,6 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
     <style>
-        /* body {
-        font-family: Arial, sans-serif;
-        background: #f8f9fa;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        min-height: 100vh;
-        margin: 0;
-        padding: 20px;
-      } */
-
         /* جزر الزراير الاختيارات  */
         .plan-selector {
             width: 50%;
@@ -99,14 +87,6 @@
             text-align: right;
         }
 
-        /*
-DC4B14
-551009
-060505
-1B2021
-3B3A37
-AE8C6F
-*/
         .pricing-features h2 {
             margin: 0 0 10px;
             font-size: 25px;
@@ -231,6 +211,7 @@ AE8C6F
                 <li><a style="font-size: 18px;" href="#service">خدماتنا</a></li>
                 <li><a style="font-size: 18px;" href="#offer">العروض</a></li>
                 <li><a style="font-size: 18px;" href="#photo">صور للجيم</a></li>
+                <li><a style="font-size: 18px;" href="#heros-section">ابطالنا</a></li>
                 <li><a style="font-size: 18px;" class="" href="#team">فريقنا</a></li>
                 <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -280,6 +261,7 @@ AE8C6F
                             <li><a href="#service">خدماتنا</a></li>
                             <li><a href="#offer">العروض</a></li>
                             <li><a href="#photo">صور للجيم</a></li>
+                            <li><a href="#heros-section">ابطالنا</a></li>
                             <li><a class="mx-4" href="#team">فريقنا</a></li>
                             <!-- <li><a class="mx-3" href="./contact.html">Contact</a></li> -->
                         </ul>
@@ -425,7 +407,8 @@ AE8C6F
                 <div class="col-lg-4 col-md-6">
                     <div class="class-item">
                         <div class="ci-pic">
-                            <img src="img/classes/2.webp" style="min-height: 230px; max-height: 230px;" alt="">
+                            <img src="img/classes/2.webp" style="min-height: 230px; max-height: 230px;"
+                                alt="">
                         </div>
                         <div class="ci-text">
                             <span style="font-size:30px !important;">اللياقه البدنيه</span>
@@ -575,7 +558,91 @@ AE8C6F
         </div>
     </div>
     <!-- Gallery Section End -->
+    <!-- ------------------------------------------------------------ -->
+    <!-- <a href="#" class="primary-btn btn-normal appoinment-btn">appointment</a> -->
 
+    <section class="team-section spad" id="heros-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section-titl">
+                        <div class="section-title">
+                            <span style="font-size: 50px !important;">افضل انتاج شمبليون جيم</span>
+                        </div>
+                    </div>
+                    <!-- <a href="#" class="primary-btn btn-normal appoinment-btn" style="text-align: center;">المدربين</a> -->
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="ts-slider owl-carousel owl-loaded owl-drag">
+                    <div class="owl-stage-outer">
+                        <div class="owl-stage"
+                            style="transform: translate3d(-1920px, 0px, 0px); transition: 1.2s; width: 3840px;">
+                            <div class="owl-item active" style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>Abo Hamza</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>Abo Hamza</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>Abo Hamza</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>Abo Hamza</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="owl-nav ">
+                        <button type="button" role="presentation" class="owl-prev">
+                            <span aria-label="Previous">‹</span>
+                        </button>
+                        <button type="button" role="presentation" class="owl-next">
+                            <span aria-label="Next">›</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ------------------------------------------------------------ -->
     <!-- Team Section Begin -->
     <section class="team-section " id="team">
         <div class="container">
@@ -601,9 +668,9 @@ AE8C6F
                         </div>
                     </div> -->
 
-            <div class="col-lg-4 mb-4 mx-auto">
+            <div class="col-sm-10 col-md-7 col-lg-5 col-xl-4  mb-4 mx-auto" >
                 <div class="ts-item set-bg">
-                    <img src="img/team/احمد-الشمبلي.jpg" alt="صوره كابتن الجيم">
+                    <img src="img/team/احمد-الشمبلي.jpg" style="border-radius: 40px;" alt="صوره كابتن الجيم">
                     <div class="ts_text">
                         <h4>احمد الشمبلي</h4>
                         <span style="font-size: 20px;">
@@ -820,7 +887,7 @@ AE8C6F
         // البيانات اللي هتتغير
         const plansData = {
             starter: {
-                title: "مميازات الاشتراك",
+                title: "مميزات الاشتراك",
                 desc: "المواعيد : كل الايام ماعدا  فتره السيدات",
                 price: "250",
                 features: [
@@ -832,7 +899,7 @@ AE8C6F
                 ],
             },
             standard: {
-                title: "مميازات الاشتراك",
+                title: "مميزات الاشتراك",
                 desc: "المواعيد: الاحد ، الثلاثاء , الخميس من 9 ل 12 صباحا ومن 6 ل 8 مساء",
                 price: "200",
                 features: [
