Add Player Photo

--- a/index.html
+++ b/index.html
@@ -580,45 +580,52 @@
                     <div class="owl-stage-outer">
                         <div class="owl-stage"
                             style="transform: translate3d(-1920px, 0px, 0px); transition: 1.2s; width: 3840px;">
+                            <!-- ahmed abo ghaly -->
                             <div class="owl-item active" style="width: 320px;">
                                 <div class="col-lg-4">
-                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
-                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/aboghaly.jpg"
+                                    style="background-image: url(&quot;img/heros-trans/aboghaly.jpg&quot;);">
+                                    <div class="ts_text">
+                                        <h4>احمد ابو غالي</h4>
+                                        <!-- <span>30</span> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <!-- hasan -->
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/hasan.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/hasan.jpg&quot;);">
                                         <div class="ts_text">
-                                            <h4>Abo Hamza</h4>
+                                            <h4>حسن ابو عامر</h4>
                                             <!-- <span>30</span> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                        <!-- الكوهري -->
+
                             <div class="owl-item " style="width: 320px;">
                                 <div class="col-lg-4">
-                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
-                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/eslam.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/eslam.jpg&quot;);">
                                         <div class="ts_text">
-                                            <h4>Abo Hamza</h4>
+                                            <h4>اسلام الكوري</h4>
                                             <!-- <span>30</span> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
+<!-- احمد عبد الله  -->
                             <div class="owl-item " style="width: 320px;">
                                 <div class="col-lg-4">
-                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
-                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/ahmed-abdalah.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/ahmed-abdalah.jpg&quot;);">
                                         <div class="ts_text">
-                                            <h4>Abo Hamza</h4>
-                                            <!-- <span>30</span> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="owl-item " style="width: 320px;">
-                                <div class="col-lg-4">
-                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/photo-1.jpg"
-                                        style="background-image: url(&quot;img/heros-trans/photo-1.jpg&quot;);">
-                                        <div class="ts_text">
-                                            <h4>Abo Hamza</h4>
+                                            <h4>احمد عبد الله</h4>
                                             <!-- <span>30</span> -->
                                         </div>
                                     </div>
