--- a/index.html
+++ b/index.html
@@ -584,16 +584,16 @@
                             <div class="owl-item active" style="width: 320px;">
                                 <div class="col-lg-4">
                                     <div class="ts-item set-bg" data-setbg="img/heros-trans/aboghaly.jpg"
-                                    style="background-image: url(&quot;img/heros-trans/aboghaly.jpg&quot;);">
-                                    <div class="ts_text">
-                                        <h4>احمد ابو غالي</h4>
-                                        <!-- <span>30</span> -->
+                                        style="background-image: url(&quot;img/heros-trans/aboghaly.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>احمد ابو غالي</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        
-                        <!-- hasan -->
+
+                            <!-- hasan -->
                             <div class="owl-item " style="width: 320px;">
                                 <div class="col-lg-4">
                                     <div class="ts-item set-bg" data-setbg="img/heros-trans/hasan.jpg"
@@ -605,7 +605,7 @@
                                     </div>
                                 </div>
                             </div>
-                        <!-- الكوهري -->
+                            <!-- الكوهري -->
 
                             <div class="owl-item " style="width: 320px;">
                                 <div class="col-lg-4">
@@ -619,7 +619,7 @@
                                 </div>
                             </div>
 
-<!-- احمد عبد الله  -->
+                            <!-- احمد عبد الله  -->
                             <div class="owl-item " style="width: 320px;">
                                 <div class="col-lg-4">
                                     <div class="ts-item set-bg" data-setbg="img/heros-trans/ahmed-abdalah.jpg"
@@ -631,6 +631,86 @@
                                     </div>
                                 </div>
                             </div>
+
+
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/elshazly.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/elshazly.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>محمد الشاذلي</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/gemy.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/gemy.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>جيمي</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/bdear.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/bdear.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>احمد بدير</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/mano.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/mano.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>عبد الرحمن قاسم</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/ahmed-adel.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/ahmed-adel.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>احمد عادل</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="owl-item " style="width: 320px;">
+                                <div class="col-lg-4">
+                                    <div class="ts-item set-bg" data-setbg="img/heros-trans/fayz.jpg"
+                                        style="background-image: url(&quot;img/heros-trans/fayz.jpg&quot;);">
+                                        <div class="ts_text">
+                                            <h4>فايز</h4>
+                                            <!-- <span>30</span> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
 
@@ -665,77 +745,45 @@
             </div>
         </div>
         <div class="row d-flex justify-content-evenly">
-            <!-- <div class="ts-slider owl-carousel"> -->
-            <!-- <div class="col-lg-4">
-                        <div class="ts-item set-bg" data-setbg="img/team/team-1.jpg">
-                            <div class="ts_text">
-                                <h4>Athart Rachel</h4>img/team/team-2.jpg
-                                <span>Gym Trainer</span>
-                            </div>
+            <div class="col-sm-10 col-md-7 col-lg-5 col-xl-4 mb-4 mx-auto">
+                <div class="ts-item set-bg"
+                    style="height:450px; position:relative; overflow:hidden; border-radius:40px;">
+
+                    <!-- الصورة -->
+                    <img src="img/team/احمد-الشمبلي.jpg" alt="صوره كابتن الجيم" loading="lazy"
+                        style="border-radius:40px; width:100%; height:100%; object-fit:cover;">
+
+                    <!-- النص والسوشيال -->
+                    <div class="ts-text"
+                        style="position:absolute; bottom:0; left:0; width:100%; text-align:center;
+                  background:rgba(0,0,0,0.5); color:#fff; padding:20px; border-top:3px solid #464646;">
+
+                        <h4 style="margin:0 0 10px 0; color: #e5e7eb;">احمد الشمبلي</h4>
+
+                        <div class="canvas-social d-flex justify-content-center text-center"
+                            style="gap:15px; display:flex; justify-content:center; align-items:center;">
+                            <a href="tel:01099714065" target="_blank"><i class="fa fa-phone"
+                                    style="color:#BBD3EB; font-size:20px;"></i></a>
+                            <a href="https://www.instagram.com/ahmed_elshambaly/?igsh=MTk5aDBlYmN4b3ZhcA%3D%3D"
+                                target="_blank"><i class="fa fa-instagram"
+                                    style="color:#BBD3EB; font-size:20px;"></i></a>
+                            <a href="https://www.facebook.com/ahmed.el.shambaly.2025?mibextid=ZbWKwL"
+                                target="_blank"><i class="fa fa-facebook"
+                                    style="color:#BBD3EB; font-size:20px;"></i></a>
+                            <a href="https://www.tiktok.com/@champollion_gym?_t=ZS-8z4diX8LVx3&_r=1"
+                                target="_blank"><i class="fa fa-tiktok"
+                                    style="color:#BBD3EB; font-size:20px;"></i></a>
                         </div>
-                    </div> -->
 
-            <div class="col-sm-10 col-md-7 col-lg-5 col-xl-4  mb-4 mx-auto" >
-                <div class="ts-item set-bg">
-                    <img src="img/team/احمد-الشمبلي.jpg" style="border-radius: 40px;" alt="صوره كابتن الجيم">
-                    <div class="ts_text">
-                        <h4>احمد الشمبلي</h4>
-                        <span style="font-size: 20px;">
-                            <div class="canvas-social d-flex justify-content-center text-center"style="gap: 15px;">
-                                <a href="tel:01099714065"><i class="fa fa-phone" style="color: #BBD3EB;"></i></a>
-                                <a href="https://www.instagram.com/ahmed_elshambaly/?igsh=MTk5aDBlYmN4b3ZhcA%3D%3D"><i
-                                        class="fa fa-instagram"style="color: #BBD3EB;"></i></a>
-                                <a href="https://www.facebook.com/ahmed.el.shambaly.2025?mibextid=ZbWKwL"><i
-                                        class="fa fa-facebook"style="color: #BBD3EB;"></i></a>
-                                <a
-                                    href="https://www.tiktok.com/@champollion_gym?_t=ZS-8z4diX8LVx3&_r=1"target="_blank"><i
-                                        class="fa fa-tiktok"style="color: #BBD3EB;"></i></a>
-
-                            </div>
-                        </span>
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-lg-6">
-                <div class="ts-item set-bg" style="min-height:550px !important;" data-setbg="img/team/team-3.jpg">
-                    <div class="ts_text">
-                        <h4>عبد الله علام</h4>
-                        <span style="font-size:20px">
-                            <div class="canvas-social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </div>
-                        </span>
-                    </div>
-                </div>
-            </div> -->
-            <!-- <div class="col-lg-4">
-                        <div class="ts-item set-bg" data-setbg="img/team/team-4.jpg">
-                            <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div class="col-lg-4">
-                        <div class="ts-item set-bg" data-setbg="img/team/team-5.jpg">
-                            <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="ts-item set-bg" data-setbg="img/team/team-6.jpg">
-                            <div class="ts_text">
-                                <h4>Athart Rachel</h4>
-                                <span>Gym Trainer</span>
-                            </div>
-                        </div>
-                    </div>-->
-            <!-- </div> -->
         </div>
+
+
+
+
+
         </div>
     </section>
     <!-- Team Section End -->
